--- a/EsTabelle/tabelle.html
+++ b/EsTabelle/tabelle.html
@@ -10,7 +10,7 @@
 
         <div><img src="top.jpg"></div>
         <div><img src="divisore.jpg"></div>
-
+             <!-- prima riga -->
         <table>
             <tr> <!-- prima riga -->
                 <td><img src="registrati-ora.jpg"></td>
