--- a/EsTabelle/tabelle.html
+++ b/EsTabelle/tabelle.html
@@ -7,9 +7,18 @@
     <title>Document</title>
 </head>
     <body>
-
+        <!--TOP OF THE PAGE-->
         <div><img src="top.jpg"></div>
-        <div><img src="divisore.jpg"></div>
+        <table>
+            <tr>
+                <td>HOME</td>
+                <td><div>|</div></td>
+                <td>SERVIZI</td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </table>
              <!-- prima riga -->
         <table>
             <tr> <!-- prima riga -->
