--- a/EsTabelle/tabelle.html
+++ b/EsTabelle/tabelle.html
@@ -9,6 +9,8 @@
     <body>
         <!--TOP OF THE PAGE-->
         <div><img src="top.jpg"></div>
+
+        <!-- prima tabella per il top -->
         <table>
             <tr>
                 <td>HOME</td>
@@ -19,16 +21,35 @@
                 <td></td>
             </tr>
         </table>
-             <!-- prima riga -->
+
+             <!-- seconda tabella per registrati ora -->
         <table>
+
             <tr> <!-- prima riga -->
                 <td><img src="registrati-ora.jpg"></td>
             </tr>
-            <table>
+
+            <table> <!-- terza tabelle per -->>
                 <tr> <!-- prima riga -->
                     
-                    <td><img src="login.jpg"></td> <!-- prima colonna -->
-                    <td><img src="libro1.jpg"></td> <!-- seconda colonna -->
+                    <td>
+                        <img src="login.jpg">
+                    </td> <!-- prima colonna -->
+                    
+                    <td>
+                        <img src="libro1.jpg">
+
+                    </td>
+
+                    <td>
+                        <p>
+                            L’attività della Edit Service offre i seguenti servizi: <br>
+                            Visita periodica al vostro studio consegnandovi direttamente in conto visione le ultime novità <br>
+                            editoriali senza obbligo di acquisto. La possibilità di richiedere sempre in visione tutti i libri <br>
+                            che volete o che troverete elencati nel sito. Ricevere le Banche Dati di vostra utilità in demo. <br>
+                            Ricevere periodicamente le news via E-mail e il catalogo di tutte le novità facendone semplicemente richiesta. <br>
+                        </p>
+                    </td> <!-- seconda colonna -->
                 </tr>
                 <tr>
                     <td><img src="catalogo.jpg"></td>
