--- a/HTML/EsTabelle/tabelle.html
+++ b/HTML/EsTabelle/tabelle.html
@@ -4,27 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sito</title>
+    <style>
+
+    </style>
 </head>
-<body>
-    <div allign="center">
-        <table>
-            <tr>
-                <img src="top.jpg">
-                <td>
-                    |<strong> HOME </strong>|<strong> LA NOSTRA AZIENDA </strong>|<strong> I PRODOTTI </strong>
-                    |<strong> I SERVIZI </strong>|<strong> CARRELLO </strong>|<strong> CONTATTI </strong>
-                </td>
-            </tr>
-            <div>
-                <table>
-                    <tr>
-                        <td>
-                            <img src="registrati-ora.jpg">
-                        </td>
-                    </tr>
-                </table>
-            </div>
-        </table>
-    </div>
-</body>
-</html>
