sito registrati ora

--- a/HTML/EsTabelle/tabelle.html
+++ b/HTML/EsTabelle/tabelle.html
@@ -3,8 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sito</title>
-    <style>
 
-    </style>
+    <title>Sito</title>
+
 </head>
+
+    <body>
+        <table>
+            <tr>
+                <td >
+                    <!-- top immagine penna -->
+                    <table>
+                        <tr> 
+                            <td>
+                                <img src="top.jpg">
+                            </td>
+                        </tr>
+                        <!-- banner-menu informazioni -->
+                        <tr> 
+                            <td align="center" style="background-color: lightslategrey; padding:15px">
+                                |<strong> HOME </strong>|<strong> LA NOSTRA AZIENDA </strong>|<strong> I PRODOTTI </strong>
+                                |<strong> I SERVIZI </strong>|<strong> CARRELLO </strong>|<strong> I CONTATTI</strong>
+                            </td> 
+                        </tr>
+                        <!-- laterale sx register-login-catalogo -->
+
+                        <tr>
+                            
+                            <td>
+                                <img src="registrati-ora.jpg"> 
+                            </td>
+
+                        <tr>
+                            <td>
+                                <img src="login.jpg">
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td>
+                                <img src="catalogo.jpg">
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+
+            </tr>
+        </table>
+
+    </body>
+</html>
+
