--- a/HTML/EsTabelle/tabelle.html
+++ b/HTML/EsTabelle/tabelle.html
@@ -9,9 +9,9 @@
 </head>
 
     <body>
-        <table>
+        <table align="center">
             <tr>
-                <td >
+                <td>
                     <!-- top immagine penna -->
                     <table>
                         <tr> 
@@ -36,10 +36,10 @@
                             <td width="20px"></td>
                             <td>
                                 <h4>L'attività della Edit Service offre i seguenti servizi:</h4>
-                                <p>Visita periodica al vostro studio consegnandovi direttamente in conto visione le ultime novità editoriali senza <br>
-                                   obbligo di acquisto. La possibilità di richiedere sempre in visione tutti i libri che volete o che troverete elencati<br>
-                                   nel sito. Ricevere le Banche Dati di vostra utilità in demo. Ricevere periodicamente le news via E-mail e il<br>
-                                   catalogo di tutte le novità facendone semplicemente richiesta.</p>
+                                <p>Visita periodica al vostro studio consegnandovi direttamente in conto visione le ultime<br> novità editoriali senza 
+                                   obbligo di acquisto. La possibilità di richiedere sempre in visione<br> tutti i libri che volete o che troverete elencati
+                                   nel sito. Ricevere le Banche Dati di vostra<br> utilità in demo. Ricevere periodicamente le news via E-mail e il
+                                   catalogo di tutte le<br> novità facendone semplicemente richiesta.</p>
                             </td>
                         </tr>
                         <table>
