--- a/HTML/EsTabelle/tabelle.html
+++ b/HTML/EsTabelle/tabelle.html
@@ -78,9 +78,15 @@
                                 <tr><td>Prezzo: 22,00</td></tr>
                                 <tr><td>*** Articolo disponibile ***</td></tr>
                                 <tr><td><a href="#">...maggiori informazioni</a></td></tr>
+                                <tr>
+                                    <td>
+                                        <img src="divisore.jpg">
+                                    </td>
+                                </tr>
                             </table>
                         </td>
                     </tr>
+                    <div><img src="divisore.jpg"></div>
                     <!-- Libro2 -->
                     <tr>
                         <td><img src="libro2.jpg" height="200px"></td>
@@ -95,9 +101,16 @@
                                 <tr><td>Prezzo: 54,00</td></tr>
                                 <tr><td>*** Articolo disponibile ***</td></tr>
                                 <tr><td><a href="#">...maggiori informazioni</a></td></tr>
+                                <tr>
+                                    <td>
+                                        <img src="divisore.jpg">
+                                    </td>
+                                </tr>
                             </table>
                         </td>
+                        
                     </tr>
+                    
                     <!-- Libro3 -->
                     <tr>
                         <td><img src="libro3.jpg" height="200px"></td>
@@ -111,6 +124,11 @@
                                 <tr><td>Prezzo: 42,00</td></tr>
                                 <tr><td>*** Articolo disponibile ***</td></tr>
                                 <tr><td><a href="#">...maggiori informazioni</a></td></tr>
+                                <tr>
+                                    <td>
+                                        <img src="divisore.jpg">
+                                    </td>
+                                </tr>
                             </table>
                         </td>
                     </tr>
