--- a/HTML/EsTabelle/tabelle.html
+++ b/HTML/EsTabelle/tabelle.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>sito</title>
+    <style>
+        
+    </style>
 </head>
-<body>
+<body style="background-color: aquamarine;">
     
-    <table align="center" border="0" width="1000px" style="color: lightslategray;">
+    <table align="center" border="0" width="1000px" style="background-color: white;">
 
         <!-- Top -->
         <tr>
@@ -28,7 +31,7 @@
         </tr>
 
         <!-- Corpo principale -->
-        <tr align="top">
+        <tr>
             <!-- Colonna sinistra: registrazione, login, catalogo -->
             <td width="30%">
                 <table border="0">
