--- a/Javascript/slide_es4/es4_5.html
+++ b/Javascript/slide_es4/es4_5.html
@@ -1,7 +1,3 @@
-<<<<<<< HEAD
-
-=======
->>>>>>> 7b938b7 (esercizio)
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,10 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-<<<<<<< HEAD
-    <div id=""></div>
-    <script></script>
-=======
     <div id="while"></div>
     <div id="for"></div>
     <script>
@@ -21,17 +13,16 @@
         let ris_for = ``;
         let cont1 = 0;
         let cont2 = 0;
-        while (cont1 < 11){
+        while (cont1 < 41){
             ris_while += `${cont1} <br>`;
-            cont1++;
+            cont1+=4;
         }
         document.getElementById("while").innerHTML=`Risultato con while: <br> ${ris_while}`;
 
-        for (cont2; cont2<=10;cont2++){
+        for (cont2; cont2<=40;cont2+=4){
             ris_for += ` ${cont2} <br>`;
         }
         document.getElementById("for").innerHTML=`Risultato con for: <br> ${ris_for}`
     </script>
->>>>>>> 7b938b7 (esercizio)
 </body>
 </html>
